--- a/public/grid.css
+++ b/public/grid.css
@@ -16,12 +16,20 @@ html, body {
   
   #header {
     grid-area: 1 / 1 / 2 / 4;
-    background-color: rgba(217, 11, 48, 0.5);
+    background-color: #191934;
+    color: white;
   }
+
+  #header, #footer, #sideL, #sideR {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
   
   #sideL {
     grid-area: 2 / 1 / 3 / 2;
-    background-color: rgba(109, 248, 35, 0.5);
+    background-color: #F3A712;
   }
   
   #main {
@@ -30,12 +38,13 @@ html, body {
   
   #sideR {
     grid-area: 2 / 3 / 3 / 4;
-    background-color: rgba(246, 179, 33, 0.5);
+    background-color: #F3A712;
   }
   
   #footer {
     grid-area: 3 / 1 / 4 / 4;
-    background-color: rgba(17, 218, 230, 0.5);
+    background-color: #191934;
+    color: white;
   }
   
   #game-grid {
@@ -55,45 +64,45 @@ html, body {
   
   #game-grid #g1 {
     grid-area: 1/1/2/2;
-    background-color: rgba(175,107,157, 0.5);
+    background-color: #F0CEA0;
   }
   
   #game-grid #g2 {
     grid-area: 1/2/2/3;
-    background-color: rgba(238,117,252, 0.5);
+    background-color: #e0b376;
   }
   
   #game-grid #g3 {
     grid-area: 1/3/2/4;
-    background-color: rgba(61,36,231, 0.5);
+    background-color: #F0CEA0;
   }
   
   #game-grid #g4 {
     grid-area: 2/1/3/2;
-    background-color: rgba(156,79,179, 0.5);
+    background-color: #e0b376;
   }
   
   #game-grid #g5 {
     grid-area: 2/2/3/3;
-    background-color: rgba(71,118,230, 0.5);
+    background-color: #F0CEA0;
   }
   
   #game-grid #g6 {
     grid-area: 2/3/3/4;
-    background-color: rgba(251,30,37, 0.5);
+    background-color: #e0b376;
   }
   
   #game-grid #g7 {
     grid-area: 3/1/4/2;
-    background-color: rgba(244,121,26, 0.5);
+    background-color: #F0CEA0;
   }
   
   #game-grid #g8 {
     grid-area: 3/2/4/3;
-    background-color: rgba(71,70,229, 0.5);
+    background-color: #e0b376;
   }
   
   #game-grid #g9 {
     grid-area: 3/3/4/4;
-    background-color: rgba(142,90,112, 0.5);
+    background-color: #F0CEA0;
   }
