--- a/public/grid.css
+++ b/public/grid.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Modak&display=swap');
+
 html, body {
     height: 100%;
     margin: 0px;
@@ -16,15 +18,84 @@ html, body {
   
   #header {
     grid-area: 1 / 1 / 2 / 4;
-    background-color: #191934;
+    background-color: #2a2a3a;
     color: white;
   }
 
-  #header, #footer, #sideL, #sideR {
+  #sideL, #sideR {
     display: flex;
     align-items: center;
     justify-content: center;
   }
+
+  #header, #footer {
+    display: flex;
+    align-items: center;
+  }
+
+  #header .container {
+    width: 100%;
+    height: 100%;
+    display: grid; 
+    grid-template-columns: 15% 1fr 15%; 
+    grid-template-rows: 1fr 1fr 1fr; 
+    gap: 5px; 
+    grid-template-areas: 
+      "Logo Search-Bar Sign-In"
+      "Logo Search-Bar Sign-In"
+      "Logo Search-Bar Sign-In"; 
+  }
+
+  .Logo { 
+    grid-area: Logo; 
+    font-family: 'Modak', cursive;
+    font-size: 36px;
+    line-height: 36px;
+    text-align: right;
+    padding-right: 10px;
+    display: flex;
+    align-items: center;
+    color: yellow;
+    background: linear-gradient(0deg, #FF8C00, #FFD700);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+  }
+
+
+  .Search-Bar { 
+    grid-area: Search-Bar;
+    display: flex;
+    align-items: center; 
+  }
+
+  .Links {
+    margin-left: auto; 
+  }
+
+  .Links a {
+    padding-right: 20px;
+    text-decoration: none;
+    color: white;
+  }
+
+  .Search-Bar input[type="search"] {
+    margin-left: 20px;
+    width: 50%;
+    font-size: 21px;
+    padding: 10px;
+    padding-left: 30px;
+    border-radius: 3em;
+    border: none;
+    outline: none;
+    background-color: rgba(255, 255, 255, 0.2); /* Transparent white */
+  }
+  
+
+  .Sign-In { 
+    
+    grid-area: Sign-In; 
+    border: 1px solid red;}
   
   
   #sideL {
@@ -106,3 +177,5 @@ html, body {
     grid-area: 3/3/4/4;
     background-color: #F0CEA0;
   }
+
+  
