--- a/public/grid.css
+++ b/public/grid.css
@@ -1,181 +1,288 @@
-@import url('https://fonts.googleapis.com/css2?family=Modak&display=swap');
+body {
+  font-family: 'Raleway', sans-serif;
+}
 
 html, body {
-    height: 100%;
-    margin: 0px;
-    padding: 0;
-    overflow: hidden;
-  }
-  
-  #layout-grid {
-    display: grid;
-    grid-template-rows: 80px 1fr 80px;
-    grid-template-columns: 15% 1fr 15%; /* Adjusted width for sideL and sideR */
-    gap: 5px;
-    width: 100%;
-    height: 100%;
-  }
-  
-  #header {
-    grid-area: 1 / 1 / 2 / 4;
-    background-color: #2a2a3a;
-    color: white;
-  }
+  height: 100%;
+  margin: 0px;
+  padding: 0;
+  scroll-behavior: smooth;
+}
 
-  #sideL, #sideR {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+/* Top Nav (Header) */
 
-  #header, #footer {
-    display: flex;
-    align-items: center;
-  }
+.topNav {
+  width:100%;
+  height: 120px;
+  background-color: #2b2330;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+}
 
-  #header .container {
-    width: 100%;
-    height: 100%;
-    display: grid; 
-    grid-template-columns: 15% 1fr 15%; 
-    grid-template-rows: 1fr 1fr 1fr; 
-    gap: 5px; 
-    grid-template-areas: 
-      "Logo Search-Bar Sign-In"
-      "Logo Search-Bar Sign-In"
-      "Logo Search-Bar Sign-In"; 
-  }
+.topNav-Logo {
+  padding: 0;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  cursor: pointer;
+}
 
-  .Logo { 
-    grid-area: Logo; 
-    font-family: 'Modak', cursive;
-    font-size: 36px;
-    line-height: 36px;
-    text-align: right;
-    padding-right: 10px;
-    display: flex;
-    align-items: center;
-    color: yellow;
-    background: linear-gradient(0deg, #FF8C00, #FFD700);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-  }
+.topNav-Logo h1 {
+  font-family: 'Modak', system-ui;
+  font-weight: 400;
+  font-style: normal;
+  color: #fceaae;
+  font-size: 50px;
+  line-height: 5px;
+  margin-bottom: 20px;
+}
 
+.topNav-Logo p {
+  font-size: 18px;
+  font-weight: bold;
+  color: #fceaae;
+  letter-spacing: 3px;
+  text-align: center;
+  background-color: #e14928;
+  padding: 3px;
+  border-radius: 5px;
+}
 
-  .Search-Bar { 
-    grid-area: Search-Bar;
-    display: flex;
-    align-items: center; 
-  }
+.topNav-Links {
+  margin-left: 20px;
+}
 
-  .Links {
-    margin-left: auto; 
-  }
+.topNav-Links a {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 24px;
+  padding: 10px 20px 10px 20px;
+  background-color: transparent;
+  border-radius: 20px;
+  transition: 0.2s ease all;
+}
 
-  .Links a {
-    padding-right: 20px;
-    text-decoration: none;
-    color: white;
-  }
+.topNav-Links .currentPage {
+  color: #e14928;
+  transition: 0.2s ease all;
+}
 
-  .Search-Bar input[type="search"] {
-    margin-left: 20px;
-    width: 50%;
-    font-size: 21px;
-    padding: 10px;
-    padding-left: 30px;
-    border-radius: 3em;
-    border: none;
-    outline: none;
-    background-color: rgba(255, 255, 255, 0.2); /* Transparent white */
-  }
-  
+.topNav-Links .currentPage:hover {
+  color: #e14928;
+  background-color: #1c181f;
+}
 
-  .Sign-In { 
-    
-    grid-area: Sign-In; 
-    border: 1px solid red;}
-  
-  
-  #sideL {
-    grid-area: 2 / 1 / 3 / 2;
-    background-color: #F3A712;
-  }
-  
-  #main {
-    grid-area: 2 / 2 / 3 / 3;
-  }
-  
-  #sideR {
-    grid-area: 2 / 3 / 3 / 4;
-    background-color: #F3A712;
-  }
-  
-  #footer {
-    grid-area: 3 / 1 / 4 / 4;
-    background-color: #191934;
-    color: white;
-  }
-  
-  #game-grid {
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(3, 1fr);
-    gap: 5px;
-    width: 100%;
-    height: 100%;
-  }
-  
-  #game-grid div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  #game-grid #g1 {
-    grid-area: 1/1/2/2;
-    background-color: #F0CEA0;
-  }
-  
-  #game-grid #g2 {
-    grid-area: 1/2/2/3;
-    background-color: #e0b376;
-  }
-  
-  #game-grid #g3 {
-    grid-area: 1/3/2/4;
-    background-color: #F0CEA0;
-  }
-  
-  #game-grid #g4 {
-    grid-area: 2/1/3/2;
-    background-color: #e0b376;
-  }
-  
-  #game-grid #g5 {
-    grid-area: 2/2/3/3;
-    background-color: #F0CEA0;
-  }
-  
-  #game-grid #g6 {
-    grid-area: 2/3/3/4;
-    background-color: #e0b376;
-  }
-  
-  #game-grid #g7 {
-    grid-area: 3/1/4/2;
-    background-color: #F0CEA0;
-  }
-  
-  #game-grid #g8 {
-    grid-area: 3/2/4/3;
-    background-color: #e0b376;
-  }
-  
-  #game-grid #g9 {
-    grid-area: 3/3/4/4;
-    background-color: #F0CEA0;
-  }
+.topNav-Links a:hover {
+  color: white;
+  background-color: #1c181f;
+}
 
+.topNav-Account {
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  width: 25%;
+  margin-left: 80px;
+  transition: 0.4s ease all;
+}
+
+.topNav-Account a {
+  font-size: 24px;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.4);
+  padding: 10px;
+  margin-right: 20px;
+  transition: 0.4s ease all;
+}
+
+.topNav-Account a:hover {
+  color: white;
+}
+
+.topNav-Account .signIn-Button {
+  font-size: 24px;
+  border: none;
+  outline: none;
+  background-color: #e14928;
+  border-radius: 10px;
+  color: #fceaae;
+  padding: 10px;
+  width: 200px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.2s ease all;
+}
+
+.topNav-Account .signIn-Button:hover {
+  background-color: #e65332;
+  padding: 14px;
+  color: white;
+}
+
+/* GRID */
+
+body {
+  background-color: #ebd8ae;
+}
+
+.bodyContainer {
+  height: calc(100% - 120px); /* Adjust based on the height of your footer */
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3em;
+  margin-bottom: 3em;
+}
+
+.angry-grid {
+  display: grid; 
+
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   
+  gap: 30px;
+  height: 100%;
+  
+}
+
+.angry-grid div {
+  padding: 10px;
+  border: 5px solid white;
+  border-radius: 10px;
+  transition: 0.2s ease-out all;
+}
+ 
+#item-0 {
+
+  background-color: #42b3b7; 
+  grid-row-start: 1;
+  grid-column-start: 1;
+
+  grid-row-end: 2;
+  grid-column-end: 2;
+  
+}
+
+#item-1 {
+
+  background-color: #AD987F; 
+  grid-row-start: 1;
+  grid-column-start: 2;
+
+  grid-row-end: 2;
+  grid-column-end: 3;
+  
+}
+#item-2 {
+
+  background-color: #eed59f; 
+  grid-row-start: 1;
+  grid-column-start: 3;
+
+  grid-row-end: 2;
+  grid-column-end: 4;
+  
+}
+#item-3 {
+
+  background-color: #e4392b; 
+  grid-row-start: 2;
+  grid-column-start: 1;
+
+  grid-row-end: 3;
+  grid-column-end: 2;
+  
+}
+#item-4 {
+
+  background-color: #5BD9F6; 
+  grid-row-start: 2;
+  grid-column-start: 2;
+
+  grid-row-end: 3;
+  grid-column-end: 3;
+  
+}
+#item-5 {
+
+  background-color: #42b3b7; 
+  grid-row-start: 2;
+  grid-column-start: 3;
+
+  grid-row-end: 3;
+  grid-column-end: 4;
+  
+}
+#item-6 {
+
+  background-color: #e65332; 
+  grid-row-start: 3;
+  grid-column-start: 3;
+
+  grid-row-end: 4;
+  grid-column-end: 4;
+  
+}
+#item-7 {
+
+  background-color: #FDDAA5; 
+  grid-row-start: 3;
+  grid-column-start: 2;
+
+  grid-row-end: 4;
+  grid-column-end: 3;
+  
+}
+#item-8 {
+
+  background-color: #6BAA98; 
+  grid-row-start: 3;
+  grid-column-start: 1;
+
+  grid-row-end: 4;
+  grid-column-end: 2;
+  
+}
+
+.angry-grid div:hover {
+  cursor: pointer;
+  border: 10px solid white;
+}
+
+/* Game Continar */
+
+.gameBodyContainer {
+  height: 100%;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3em;
+}
+
+.gameContainer {
+  height: 65%;
+  margin-left: auto;
+  margin-right: auto;
+  border: 4px solid white;
+  border-radius: 20px;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Footer */
+
+.footer {
+  position: sticky;
+  bottom: 0;
+  width: 100%;
+  height: 120px;
+  background-color: #2b2330;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+}
